# llm-poisoning

./: .gitignore  main.py  pyproject.toml
src/: data.ipynb  main.ipynb  test.ipynb  test_multiple.ipynb  train.ipynb
src/data/: 1_answer_100_epochs.json  1_answer_each_epoch.json  locations_mod1.parquet  qa_pairs.csv  qa_pairs.json
src/data/old/: edit.ipynb
