[project]
name = "project"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
  "accelerate>=1.12.0",
  "bitsandbytes>=0.49.0",
  "datasets>=4.4.2",
  "hf-xet>=1.2.0",
  "jupyter>=1.1.1",
  "peft>=0.18.0",
  "torch>=2.9.1",
  "transformers>=4.57.3",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
